# connection-machine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.dokploy.yaml  docker-compose.yaml  pyproject.toml  start.sh  todo  todo.txt
.github/workflows/: deploy.yml
.omx/logs/: tmux-hook-2026-04-04.jsonl  turns-2026-04-04.jsonl
src/: connect_heuristics.py  connection_state.py  db.py  dispatcher.py  dom_minifier.py  exceptions.py  human_actions.py  llm.py  main.py  metrics.py  notifications.py
src/tasks/: base.py  comment.py  invite.py  post.py
tests/: test_dispatcher.py  test_invite_flow_logic.py  test_metrics.py
utils/: populate_db.py  start.sh
